Fix many issues found in the Approvals page

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -162,6 +162,9 @@
   "projects.pendingApproval": "Pending Approval",
   "projects.pendingApprovalMessage": "Your access request is pending admin approval.",
   "projects.pendingReadOnly": "Pending (Read-Only)",
+  "projects.recoveredApproval": "Awaiting Re-approval",
+  "projects.recoveredApprovalMessage": "After your password recovery, an administrator needs to re-approve your access to this project.",
+  "projects.recoveredReadOnly": "Recovery (Read-Only)",
   "projects.cancelRequest": "Cancel Request",
   "projects.cancelling": "Cancelling...",
   "projects.cancelRequestConfirm": "Are you sure you want to cancel your request to join \"{name}\"?",
