--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -162,6 +162,9 @@
   "projects.pendingApproval": "En attente d'approbation",
   "projects.pendingApprovalMessage": "Votre demande d'accès est en attente d'approbation par un administrateur.",
   "projects.pendingReadOnly": "En attente (Lecture seule)",
+  "projects.recoveredApproval": "En attente de réapprobation",
+  "projects.recoveredApprovalMessage": "Après la récupération de votre mot de passe, un administrateur doit réapprouver votre accès à ce projet.",
+  "projects.recoveredReadOnly": "Récupération (Lecture seule)",
   "projects.cancelRequest": "Annuler la demande",
   "projects.cancelling": "Annulation...",
   "projects.cancelRequestConfirm": "Êtes-vous sûr de vouloir annuler votre demande pour rejoindre « {name} » ?",
