Revert "Remove deprecated things (#159)"
This reverts commit 73bccaa1102fc0c88a70aaae74fed43472b3801c.

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -256,6 +256,60 @@
   "overview.belowExpected": "Below expected minimum",
   "overview.failedToLoad": "Failed to load overview",
 
+  "cashflow.title": "Cashflow Planning",
+  "cashflow.failedToLoad": "Failed to load cashflow projection",
+  "cashflow.timeHorizon": "Time Horizon",
+  "cashflow.threeMonths": "3 Months",
+  "cashflow.sixMonths": "6 Months",
+  "cashflow.twelveMonths": "12 Months",
+  "cashflow.recommendationMode": "Recommendation Method",
+  "cashflow.simpleAverage": "Simple Average",
+  "cashflow.linearRegression": "Linear Regression",
+  "cashflow.balanceOverTime": "Balance Over Time",
+  "cashflow.balance": "Balance",
+  "cashflow.month": "Month",
+  "cashflow.recommendations": "Recurring Contribution Recommendations",
+  "cashflow.participant": "Participant",
+  "cashflow.currentTrend": "Current Trend (Monthly)",
+  "cashflow.recommended": "Recommended",
+  "cashflow.recommendationNote": "These recommendations show how much each participant should contribute at the selected frequency to stay balanced over the time horizon.",
+  "cashflow.transactionFrequency": "Transaction Frequency",
+  "cashflow.every": "Every",
+  "cashflow.weeks": "week(s)",
+  "cashflow.months": "month(s)",
+  "cashflow.years": "year(s)",
+  "cashflow.poolEvolution": "Pool Account Evolution",
+  "cashflow.evolution": "Evolution",
+  "cashflow.noRecommendations": "No recommendations available yet",
+  "cashflow.bankUpdateWarning": "⚠️ REMINDER: Don't forget to update your recurring bank transfer to match this transaction!\n\nAfter creating this recurring transaction in BonsCompte, please also update (or create) the corresponding automatic transaction in your bank account.\n\nClick OK to continue creating the transaction.",
+  "cashflow.consolidateMode": "Consolidate existing recurring transactions",
+  "cashflow.consolidateModeHelp": "When enabled, existing recurring pool contributions will be excluded from the calculation and replaced with a single optimized transaction when you click 'Create Payment'.",
+  "cashflow.transactionsToDelete": "Payments That Will Be Deleted",
+  "cashflow.consolidateExplanation": "When you click 'Create Payment', the following existing recurring transactions will be deleted and replaced with a single optimized transaction:",
+  "cashflow.consolidateAction": "A new consolidated transaction will be created with the recommended amount and frequency.",
+  "cashflow.consolidateWarning": "⚠️ CONSOLIDATE MODE WARNING\n\nYou are about to DELETE {count} existing recurring transaction(s) and replace them with a single consolidated transaction:\n\nPayments to be deleted:\n{transactionsList}\n\nNew transaction:\n{newAmount} every {frequency}\n\nThis action cannot be undone. Are you sure you want to proceed?",
+  "cashflow.consolidatedPaymentDescription": "Consolidated recurring contribution (recommended)",
+  "cashflow.consolidateSuccess": "Successfully consolidated {count} transaction(s) into one!",
+  "cashflow.consolidateError": "Failed to consolidate transactions. Please try again.",
+  "cashflow.configureRecommendation": "Configure Recurring Contribution",
+  "cashflow.payer": "Payer",
+  "cashflow.receiver": "Target Account",
+  "cashflow.selectPayer": "Select payer...",
+  "cashflow.selectReceiver": "Select target account...",
+  "cashflow.startDate": "Start Date",
+  "cashflow.endDate": "End Date",
+  "cashflow.shouldTransfer": "should transfer",
+  "cashflow.perFrequency": "every {interval} {type}",
+  "cashflow.to": "to",
+  "cashflow.currentTrendLabel": "Current trend",
+  "cashflow.method": "Method",
+  "cashflow.noRecommendationData": "No recommendation data available for this configuration",
+  "cashflow.selectPayerReceiver": "Select a payer and target account to see the recommendation",
+  "cashflow.includeInProjection": "Include recommendation in projection",
+  "cashflow.today": "Today",
+  "cashflow.date": "Date",
+  "cashflow.recommendationHorizon": "Recommendation Horizon",
+
   "transactions.title": "Transaction List",
   "transactions.addPayment": "Add Payment",
   "transactions.editPayment": "Edit Payment",
