Fix image input triggering when clicking outside of the button

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -269,6 +269,7 @@
   "transactions.descriptionPlaceholder": "What was this for?",
   "transactions.receiptImage": "Receipt Image",
   "transactions.imageFormatsHint": "(JPEG, PNG, GIF, WebP - max 5MB)",
+  "transactions.chooseFile": "Choose file",
   "transactions.receiptPreview": "Receipt preview",
   "transactions.internalTransferTo": "Internal Transfer to",
   "transactions.splitBetween": "Split between",
