--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -16,6 +16,11 @@
   "common.unknown": "Inconnu",
   "common.total": "Total",
 
+  "datePicker.alreadyToday": "Déjà défini à aujourd'hui",
+  "datePicker.fromDateInFuture": "La date de début est aujourd'hui ou plus tard",
+  "datePicker.startDateInFuture": "La date de début est aujourd'hui ou plus tard",
+  "datePicker.todayOutOfRange": "Aujourd'hui est en dehors de la plage de dates valide",
+
   "nav.projects": "Projets",
   "nav.transactions": "Transactions",
   "nav.settings": "Paramètres",
@@ -466,7 +471,7 @@
   "history.actions.DELETE": "Supprimé",
   "history.actions.UNDO": "Annulé",
   "history.entities.all": "Tous les types",
-  "history.entities.payment": "Paiements",
+  "history.entities.transaction": "Transactions",
   "history.entities.participant": "Participants",
   "history.entities.project_member": "Membres",
   "history.entities.project": "Projet",
